# ssh_transfer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: authentication.rs  config.rs  configuration.rs  connection.rs  error.rs  known_host.rs  known_hosts.rs  lib.rs  session.rs
src/authentication/: mod.rs  password.rs
src/sftp/: list.rs  mod.rs  reader.rs  writer.rs
