[package]
name = "ssh-transfer"
version = "0.1.0"
authors = ["Valentin NOEL <valentin.noel@media-io.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
dirs = "3.0.1"
log = "0.4"
ssh2 = "0.9"
whoami = "1.1"

[dev-dependencies]
env_logger = "0.8"
