[package]
name = "ssh-transfer"
version = "0.1.1"
authors = [
  "Valentin NOEL <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>",
]
description = "License to transfer file vie SFTP protocol"
license = "MIT"
edition = "2018"


[dependencies]
base64 = "0.13"
dirs = "3.0.1"
log = "0.4"
ssh2 = "0.9"
whoami = "1.1"

[dev-dependencies]
env_logger = "0.8"
